2-Orchestration/clusters/home-automation/unifi/configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: unifi-controller
  name: unifi-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-controller
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: unifi-controller
    spec:
      containers:
      - image: linuxserver/unifi-controller:7.4.162
        name: unifi-controller
        resources: {}
        volumeMounts:
        - name: data
          mountPath: /config
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 3478
          protocol: UDP
        - containerPort: 10001
          protocol: UDP
        - containerPort: 1900
          protocol: UDP
        - containerPort: 8843
          protocol: TCP
        - containerPort: 8880
          protocol: TCP
        - containerPort: 6789
          protocol: TCP
        - containerPort: 5514
          protocol: UDP
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: unifi-config-data
