2-Orchestration/clusters/home-automation/unifi/configs/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
spec:
  selector:
    app: unifi-controller
  ports:
    - name: unifi-http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: unifi-https
      protocol: TCP
      port: 8443
      targetPort: 8443s    
    - name: unifi-1
      protocol: UDP
      port: 3478
      targetPort: 3478
    - name: unifi-2
      protocol: UDP
      port: 10001
      targetPort: 10001
    - name: unifi-3
      protocol: UDP
      port: 1900
      targetPort: 1900
    - name: unifi-4
      protocol: TCP
      port: 8843
      targetPort: 8843
    - name: unifi-5
      protocol: TCP
      port: 8880
      targetPort: 8880
    - name: unifi-6
      protocol: TCP
      port: 6789
      targetPort: 6789
    - name: unifi-7
      protocol: UDP
      port: 5514
      targetPort: 5514
  type: LoadBalancer
