2-Orchestration/clusters/home-automation/unifi/configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  selector:
    app: unifi-controller
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
