2-Orchestration/clusters/home-automation/unifi/configs/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: unifi
spec:
  exportTo:
  - istio-system
  gateways:
  - istio-system/home
  hosts:
  - unifi.home.kellerhome.us
  http:
  - route:
    - destination:
        host: unifi
        port:
          number: 8080
